<resources>
    <string name="app_name">Наряды</string>
    <string name="hello_world">Hello world!</string>
    <string name="undo">ОТМЕНИТЬ</string>
    <string name="deleted">Удалено</string>
    <string name="selected">Выбрано</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_activity_main">Наряды</string>
    <string name="btn_send">Отправить</string>
    <string name="btn_confirm">Подтвердить</string>
    <string name="btn_test">Тест WEB</string>
    <string name="btn_get">Загрузка</string>
    <string name="title_activity_web_kit">Загрузка ПО</string>
    <string name="title_activity_search">Поис нарядов</string>
    <string name="action_settings">Настройки</string>
    <string name="action_add_job">Добавить работу</string>
    <string name="action_complete_job">Отметить</string>
    <string name="action_seals">Пломбы</string>
    <string name="action_seal_cert">Справки опломбирования</string>
    <string name="action_edit_inventory_num">Инвентарный номер</string>
    <string name="edit_inventory_num">Введите инвентарный номер</string>
    <string name="action_edit_cash_num">Номер кассы</string>
    <string name="edit_cash_num">Введите номер кассы</string>
    <string name="action_edit_cash_ip">IP адрес кассы</string>
    <string name="edit_cash_ip">Введите IP адрес кассы</string>
    <string name="action_edit_modem_ip">IP адрес модема</string>
    <string name="edit_modem_ip">Введите IP адрес модема</string>
    <string name="edit_factory_seal">"Заводская пломба: "</string>
    <string name="edit_factory_seal_on">есть</string>
    <string name="edit_factory_seal_off">нет</string>
    <string name="action_call_developer">Позвонить разработчику</string>
    <string name="action_full_exit">Прекратить работу программы</string>
    <string name="action_help">Помощь</string>
    <string name="action_new_msg">Новое сообщение</string>
    <string name="action_del_msg">Удалить сообщение</string>
    <string name="action_msg_senders">"Корреспондентов: "</string>
    <string name="action_msg_cntrs">"Сообщений: "</string>
    <string name="action_mark_all_msg_as_read">Прочитать все</string>
    <string name="action_warr_online">Переход к онлайн нарядам</string>
    <string name="action_refresh_msg">Обновить сообщения</string>
    <string name="action_refresh_log">Обновить лог</string>
    <string name="action_send_log">Переслать лог</string>
    <string name="action_clear_msg">Удалить все сообщения</string>
    <string name="action_clear_log">Очистить лог</string>
    <string name="m_repair_btn">Расход</string>
    <string name="action_refresh_warrants">Обновить наряды</string>
    <string name="action_refresh_list">Обновить</string>
    <string name="action_resend_marks">Переслать отметки</string>
    <string name="action_remark">Комментарий</string>
    <string name="action_delete">Удалить</string>
    <string name="action_send">Переслать</string>
    <string name="action_not_send">Не пересылать</string>
    <string name="action_add">Добавить</string>
    <string name="action_change_eq_srl">Заменить с/н</string>
    <string name="action_change_job">Заменить назначенную работу</string>
    <string name="action_streetview">Показать вид улицы</string>
    <string name="action_google_map">Показать карту Google</string>
    <string name="title_activity_warr_list">Наряды загрузка</string>
    <string name="title_activity_warrants">Наряды</string>
    <string name="btn_show">Показ</string>
    <string name="btn_show_warrs">Наряды</string>
    <string name="m_warr_num">Наряд №</string>
    <string name="m_warr_id">ИД наряда</string>
    <string name="action_sign_warrant">Подписать наряд</string>
    <string name="action_show_specs">Спецификация</string>
    <string name="action_check_all">Отметить все</string>
    <string name="action_mark_job_done">Отметить работу как выполненную</string>
    <string name="action_mark_msg_as_read">Отметить сообщение как прочитанное</string>
    <string name="title_sign_warrant">Подпись наряда</string>
    <string name="action_discard_warrant">Отказаться от наряда</string>
    <string name="action_submit_seals">Выбрать</string>
    <string name="action_report_warrant">Отметка об отчете</string>
    <string name="action_show_emp_mark_time">Показать отметки рабочего времени</string>
    <string name="action_dont_discard_warrant">Отменить отказ от наряда</string>
    <string name="btn_msgs">Сообщения</string>
    <string name="btn_msgs_list">Список сообщений</string>
    <string name="btn_send_msgs">Передача сообщений</string>
    <string name="btn_send_worktime">Передача отметок рабочего времени</string>
    <string name="btn_send_locations">Передача местоположения</string>
    <string name="btn_scan_barcode">Сканер штрихкода</string>
    <string name="btn_show_webkit">Загрузить ПО</string>
    <string name="btn_show_location">Текущие координаты</string>
    <string name="btn_show_location_on_map">Показать на карте</string>
    <string name="btn_start_scan">Сканировать</string>
    <string name="btn_upload">Выгрузка</string>
    <string name="title_activity_warr_cont">Назначенные работы</string>
    <string name="title_activity_warr_unit">Выполненные работы</string>
    <string name="title_activity_warr_repair">Расход запчастей</string>
    <string name="btn_map">Карта</string>
    <string name="caption_choose_user">Выберите пользователя</string>
    <string name="caption_choose_logview">Выберите тип</string>
    <string name="caption_choose_date">Выберите дату</string>
    <string name="caption_choose_warrant">Выберите наряд</string>
    <string name="title_activity_map">Карта объектов</string>
    <string name="caption_get_data">Загрузить данные</string>
    <string name="caption_clear_data">Очистить данные</string>
    <string name="caption_data_counters">"Счетчики:"</string>
    <string name="btn_get_const">Справочники</string>
    <string name="btn_get_warr">Наряды</string>
    <string name="btn_begin_mark">Начать</string>
    <string name="btn_end_mark">Закончить</string>
    <string name="btn_mark_job">Отметить</string>
    <string name="btn_msg_reply">Ответить</string>
    <string name="btn_add_job">Добавить</string>
    <string name="btn_del_job">Удалить</string>
    <string name="btn_add_repair">Добавить</string>
    <string name="btn_ok">Подтвердить</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_save">Сохранить</string>
    <string name="m_num">Номер</string>
    <string name="m_date_lbl">от</string>
    <string name="m_date">Дата</string>
    <string name="m_reason">Причина</string>
    <string name="m_seal_broken">РРО распломбирован:</string>
    <string name="m_seal_set">РРО опломбирован:</string>
    <string name="m_defect">Характер неисправности</string>
    <string name="m_factory_seal">Есть заводская пломба</string>
    <string name="m_ppo_money">Остаток денег в кассе</string>
    <string name="caption_ppo_money">Остаток</string>
    <string name="time_caption">Установка времени</string>
    <string name="date_caption">Установка даты</string>
    <string name="error_no_defect_info">Необходимо указать информацию о дефекте</string>
    <string name="error_no_money_info">Необходимо указать остаток денег в кассе</string>
    <string name="error_date_seal">Дата опломбирования должна быть больше даты распломбирования</string>
    <string name="title_input_comment">Введите комментарий</string>
    <string name="btn_done">Готово</string>
    <string name="title_ask_sure">Вы уверены?</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="m_search">Поиск&#8230;</string>
    <string name="m_dialog_ask">Вопрос</string>
    <string name="m_dialog_name">Имя</string>
    <string name="title_activity_job_group_select">Выбор работы</string>
    <string name="title_activity_job_select">Выбор работы</string>
    <string name="title_activity_eq_select">Выбор оборудования</string>
    <string name="caption_get_job">Выберите требуемую работу</string>
    <string name="caption_choose_specs">Выберите оборудование</string>
    <string name="caption_choose_specs_group">Выберите группу оборудования</string>
    <string name="caption_choose_employee">Выберите получателя сообщения</string>
    <string name="title_activity_emp_hwselect">Запасные части</string>
    <string name="caption_get_emphw">Выберите требуемую запчасть</string>
    <string name="caption_get_emp_seal">Выберите требуемую пломбу</string>
    <string name="caption_seal_cnt">" (Всего: %d)"</string>
    <string name="caption_seal_cert">"Всего справок опломбирования: "</string>
    <string name="caption_no_seal_cert_reasons">Нет справочника причин неисправности РРО</string>
    <string name="caption_warr_cont_info">"Назначено работ: "</string>
    <string name="caption_warr_unit_info">"Выполнено работ: "</string>
    <string name="caption_warr_repair_info">"Потрачено запчастей: "</string>
    <string name="caption_job_cntr">"Работ: "</string>
    <string name="caption_to_sign">"Требуется подпись"</string>
    <string name="caption_warr_signed">"Наряд подписан"</string>
    <string name="m_w_modified">В нарядах есть не сохраненные изменения, которые будут утеряны!</string>
    <string name="m_continue">" Продолжить?"</string>
    <string name="m_get_warr">Загрузка нарядов</string>
    <string name="m_clear_warr">Удаление нарядов</string>
    <string name="m_del_warr_unit">Удаление выполненной работы</string>
    <string name="m_del_warr_unit_repair">Удаление невозможно! Нужно предварительно удалить запчасти!</string>
    <string name="m_del_warr_unit_seals">Удаление данной работы невозможно!</string>
    <string name="m_del_warr_cont">Удаление назначенной работы</string>
    <string name="m_del_warr_cont_unit">Удаление невозможно! Нужно предварительно удалить выполненные работы!</string>
    <string name="m_add_warr_cont">Добавление назначенной работы</string>
    <string name="m_warr_cont_exists">Данное оборудование уже присутствует в наряде!</string>
    <string name="m_add_warr_cont_error">"Добавление невозможно! "</string>
    <string name="m_change_warr_cont">Замена оборудования</string>
    <string name="m_change_warr_cont_error">"Замена невозможна! "</string>
    <string name="m_load_soft">Перед установкой новой версии ПО рекомендуется убедиться, что все изменения сохранены на сервере!</string>
    <string name="m_read_data">"Считываем данные&#8230;"</string>
    <string name="m_send_log">"Готовим лог к передаче&#8230;"</string>
    <string name="m_send_data">"Передача данных&#8230;"</string>
    <string name="m_sign_warrant">Подпись наряда</string>
    <string name="m_sign_warr_no_name">Не указано ответственное лицо</string>
    <string name="m_sign_warr_no_auth">Ответственное лицо не активировано в системе</string>
    <string name="m_sign_warr_error">Ошибка поиска ответственного лица</string>
    <string name="m_signing_warr_error">Не удалось подписать наряд</string>
    <string name="title_activity_messages">Мои сообщения</string>
    <string name="title_activity_message">Сообщение</string>
    <string name="caption_sender">Отправитель</string>
    <string name="caption_receiver">Получатель</string>
    <string name="caption_send_date">Отправлено</string>
    <string name="caption_subj">Тема</string>
    <string name="caption_photo">Сделать снимок</string>
    <string name="caption_msg">Текст сообщения</string>
    <string name="title_activity_emp_select">Выбор сотрудника</string>
    <string name="m_update_dictionaries">Обновить справочники</string>
    <string name="m_disable_conn_service">Отключить сервис подключений</string>
    <string name="m_enable_location_service">Включить сервис местоположения</string>
    <string name="title_activity_log">Лог программы</string>
    <string name="title_activity_traffic_stat">Учет трафика</string>
    <string name="title_activity_seal_view">Пломбы РРО</string>
</resources>