<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:visible="true"/>
    <item
        android:id="@+id/action_discard_warrant"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_discard_warrant"/>
    <item
        android:id="@+id/action_remark"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        android:title="@string/action_remark"/>
    <item
        android:id="@+id/action_change_srl"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_revert"
        android:showAsAction="ifRoom"
        android:title="@string/action_change_eq_srl"/>
    <item
        android:id="@+id/action_change_job"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_revert"
        android:showAsAction="never"
        android:title="@string/action_change_job"/>
    <item
        android:id="@+id/action_wc_delete"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/btn_del_job"/>
    <item
        android:id="@+id/action_scan_barcode"
        android:orderInCategory="100"
        android:icon="@mipmap/bar"
        android:showAsAction="ifRoom"
        android:title="@string/btn_scan_barcode"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_show_emp_mark_time"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/action_show_emp_mark_time"/>
    <item
        android:id="@+id/action_sign_warrant"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/action_sign_warrant"/>
    <item
        android:id="@+id/action_show_specs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_show_specs"/>
    <item
        android:id="@+id/action_check_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_check_all"/>
    <item
        android:id="@+id/action_mark_job_done"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/btn_star"
        android:title="@string/action_mark_job_done"/>
    <item
        android:id="@+id/action_begin_emp_mark"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/btn_begin_mark"/>
    <item
        android:id="@+id/action_end_emp_mark"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/btn_end_mark"/>
    <item
        android:id="@+id/action_show_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/btn_map"/>
    
</menu>