<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:visible="false"/>
    <item
        android:id="@+id/action_refresh_warrants"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_popup_sync"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh_warrants"/>
    <item
        android:id="@+id/action_scan_barcode"
        android:orderInCategory="100"
        android:icon="@mipmap/bar"
        android:showAsAction="ifRoom"
        android:title="@string/btn_scan_barcode"/>
    <item
        android:id="@+id/action_show_warr_map"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_dialog_map"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_map"/>
    <item
        android:id="@+id/action_show_emp_locations"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="ifRoom"
        android:title="@string/btn_show_location"/>

    <item
        android:id="@+id/action_show_web_soft"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_web_kit"/>
    <item
        android:id="@+id/action_update_dictionaries"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/m_update_dictionaries"/>
    <item
        android:id="@+id/action_disable_conn_service"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/m_disable_conn_service"/>
    <item
        android:id="@+id/action_disable_location_service"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/m_enable_location_service"/>
    <item
        android:id="@+id/action_show_emp_hw"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_emp_hwselect"/>
    <item
        android:id="@+id/action_show_traffic_stat"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_traffic_stat"/>
    <item
        android:id="@+id/action_show_logs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_log"/>
    <item 
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/m_search" android:visible="false"/>
    <item 
        android:id="@+id/dialog_name"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="never"
        android:title="@string/m_dialog_name" android:visible="false"/>
    <item 
        android:id="@+id/dialog_ask"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="never"
        android:title="@string/m_dialog_ask" android:visible="false"/>
    
</menu>