<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_call_developer"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_call_developer"/>
    <item
        android:id="@+id/action_full_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_full_exit"/>
    <item
        android:id="@+id/action_show_logs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_log"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_soft_download"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_web_kit"/>
    
</menu>