<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:visible="false"/>
    <item
        android:id="@+id/action_new_msg"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_msg"/>
    <item
        android:id="@+id/action_del_msg"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/action_del_msg"/>
    <item
        android:id="@+id/action_warr_online"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_warr_online"/>
    <item
        android:id="@+id/action_mark_msg_as_read"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_mark_msg_as_read"/>
    
</menu>